# redshift-pocs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  VERSION.yml  configure
cmake/: Utils.cmake
m4/: foreachq.m4  forloop.m4  quote.m4
ops/: README.md  Vagrantfile  cf.json  create-images.sh
ops/salt/: aws.sls  pocs.sls  psql.sls  python.sls  ssh.sls  top.sls
ops/salt/config/: bootstrap-salt.sh  minion
ops/salt/zsh/: .zshrc  init.sls
src/: CMakeLists.txt
src/client/: CMakeLists.txt  login.sh_in
src/client/interleaved-sort-keys/: README.md_in  benchmark-run.sh_in  benchmark.sql_in  ddl-create.sql_in  ddl-drop.sql_in  ddl-run.sh_in  implementation.sql_in  theory.sql_in
src/client/load-data/: README.md_in  ddl-create.sql_in  ddl-drop.sql_in  dml-copy.sql_in  load-data.sh_in
src/client/load-data/manifests/: customer.manifest_in  date.manifest_in  lineorder.manifest_in  part.manifest_in  supplier.manifest_in
src/worker/: CMakeLists.txt  auth-cluster.sh_in
