# -- Build and install --------------------------------------------------------

define_m4_defines(M4_DEFINES_CMD_LINE)

# Shell files
add_m4_files(
  WORKER_SHELL_TARGET_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}"
  "sh"
  ${M4_DEFINES_CMD_LINE}
)
add_custom_target(workerShellFiles ALL DEPENDS ${WORKER_SHELL_TARGET_FILES})
install(
  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  FILES_MATCHING PATTERN "*.sh"
  PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
              OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "*.cmake" EXCLUDE
  PATTERN "Makefile" EXCLUDE
)

# Markdown files
add_m4_files(
  WORKER_MARKDOWN_TARGET_FILES
  "${CMAKE_CURRENT_SOURCE_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}"
  "md"
  ${M4_DEFINES_CMD_LINE}
)
add_custom_target(workerMarkdownFiles ALL DEPENDS ${WORKER_MARKDOWN_TARGET_FILES})
install(
  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DESTINATION ${CMAKE_INSTALL_PREFIX}
  FILES_MATCHING PATTERN "*.md"
  PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ
  PATTERN "CMakeFiles" EXCLUDE
  PATTERN "*.cmake" EXCLUDE
  PATTERN "Makefile" EXCLUDE
)
